--- a/Index.html
+++ b/Index.html
@@ -322,21 +322,12 @@
                     <p class="text">Contate-nos através do e-mail ou número.</p>
                     <div class="box-det-contato">
                         <div class="email-det">
-<<<<<<< HEAD
                             <img src="src/assets/img/icon/email.svg" alt="Icone de Email" />
                             <p class="pl-1 m-0 text-color-dark">Banco.de.sangue@gmail.com</p>
                         </div>
                         <div class="telefone-det">
                             <img src="src/assets/img/icon/telephone.svg" alt="Icone de Email" />
                             <p class="pl-1 m-0 text-color-dark">(81) 00000-0000</p>
-=======
-                           <img src="src/assets/img/icon/email.svg" alt="Icone de Email">
-                           <p class="text-color-dark">Banco.de.sangue@gmail.com</p>
-                        </div>
-                        <div class="telefone-det">
-                            <img src="src/assets/img/icon/telephone.svg" alt="Icone de Email">
-                            <p class="text-color-dark">(81) 00000-0000</p>
->>>>>>> 45367de5ca1b3de549a7b392216c346677f36853
                         </div>
                     </div>
                     <div class="box-feedback">
@@ -391,7 +382,7 @@
             </div>
         </footer>
 
-<<<<<<< HEAD
+        <script src="dist/main.bundle.js"></script>
         <script src="src/js/main.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -399,8 +390,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-=======
-        <script type="text/javascript" src="dist/main.bundle.js"></script>
->>>>>>> 45367de5ca1b3de549a7b392216c346677f36853
     </body>
 </html>
