Adicionando tela de informações

--- a/homeUser.html
+++ b/homeUser.html
@@ -3,14 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="shortcut icon" href="src/assets/img/icon/favicon.ico" type="image/x-icon">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
         <link rel="stylesheet" href="src/assets/css/bootstrap-grid.min.css" />
-
         <link rel="stylesheet" href="src/assets/css/main.css" />
-        <title>Sangue Solidário</title>
+        <title>E-sangue</title>
     </head>
     <body>
         <!-- PRELOAD -->
@@ -37,14 +36,8 @@
                             <a href="#contato" class="hv-contato text-color-light">Contato</a>
                             <div class="bg-hover"></div>
                         </nav>
-
-                        <div class="btn-container">
-                            <button class="btn-cadastro">
-                                <a href="cadastro.html">Cadastre-se</a>
-                            </button>
-                            <button class="btn-login">
-                                <a href="login.html">Login</a>
-                            </button>
+                        <div class="perfil-container">
+                            <img src="src/assets/img/icon/user-icon.svg" alt="Icone do perfil" />
                         </div>
                     </div>
                 </div>
@@ -58,21 +51,12 @@
         <nav class="navBar-mob menu-is-close">
             <a href="#home" class="hv-home text-color-light">Home</a>
             <a href="#servicos" class="hv-servico text-color-light">Serviços</a>
-            <a href="informaçao.html" class="hv-informacao text-color-light">Informações</a>
+            <a href="#informacao" class="hv-informacao text-color-light">Informações</a>
             <a href="#contato" class="hv-contato text-color-light">Contato</a>
             <div class="bg-hover"></div>
 
-            <div class="btn-container-mob">
-                <div>
-                    <button class="btn-cadastro-mob">
-                        <a href="cadastro.html">Cadastre-se</a>
-                    </button>
-                </div>
-                <div>
-                    <button class="btn-login-mob">
-                        <a href="login.html">Login</a>
-                    </button>
-                </div>
+            <div class="perfil-container-mob">
+                <img src="src/assets/img/icon/user-icon.svg" alt="Icone do perfil" />
             </div>
         </nav>
 
@@ -332,7 +316,6 @@
                             <img src="src/assets/img/icon/telephone.svg" alt="Icone de Email" />
                             <p class="pl-1 m-0 text-color-dark">(81) 00000-0000</p>
                         </div>
-
                     </div>
                     <div class="box-feedback">
                         <label for="feedback"></label>
@@ -386,7 +369,7 @@
             </div>
         </footer>
 
-        <!-- HEAD --> 
+        <!-- HEAD -->
         <script src="src/js/main.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
