--- a/cadastro.html
+++ b/cadastro.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link rel="shortcut icon" href="src/assets/img/icon/favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="src/assets/css/bootstrap-grid.min.css" />
         <link rel="stylesheet" href="src/assets/css/cadastroStyle.css" />
-        <title>Cadastro</title>
+        <title>Cadastre-se</title>
     </head>
     <body>
         <section class="container-cadastro">
