Melhorando a responsividade da tela de agendamendo

--- a/Index.html
+++ b/Index.html
@@ -355,11 +355,9 @@
 
                         <div class="footer-servicos">
                             <h6 class="title-footer text-color-light">Serviços</h6>
-                            <a href="#">Agendamento</a>
-                            <a href="#">Informações</a>
-                            <a href="#">Galeria</a>
-                            <a href="#">Avaliações</a>
-                            <a href="#">Banco de sangue</a>
+                            <a href="scheduling.html">Agendamento</a>
+                            <a href="informaçao.html">Informações</a>
+                            <a href="informaçao.html">Como doar?</a>
                         </div>
 
                         <div class="seguir">
