--- a/login.html
+++ b/login.html
@@ -11,6 +11,9 @@
         <title>Login</title>
     </head>
     <body>
+        <div class="btn-voltar-mob">
+            <a href="Index.html">Voltar</a>
+        </div>
         <section class="container-login">
             <div class="login">
                 <div class="container-form">
