--- a/scheduling.html
+++ b/scheduling.html
@@ -124,7 +124,7 @@
                                         </p>
                                     </div>
                                     <div class="adviceItemList-infolink">
-                                        <button ><a href="#">Acessar</a></button>
+                                        <button ><a href="informaçao.html">Acessar</a></button>
                                     </div>
                                 </div>
                             </li>
