Resolvido links da navbar do agendamento

--- a/scheduling.html
+++ b/scheduling.html
@@ -21,9 +21,9 @@
 
                     <nav class="nav-container">
                         <a href="Index.html" class="hv-home text-color-light">Home</a>
-                        <a href="Index.html/#servicos" class="hv-servico text-color-light">Serviços</a>
-                        <a href="Index.html/#informacao" class="hv-informacao text-color-light">Informações</a>
-                        <a href="Index.html/#contato" class="hv-contato text-color-light">Contato</a>
+                        <a href="Index.html#servicos" class="hv-servico text-color-light">Serviços</a>
+                        <a href="Index.html#informacao" class="hv-informacao text-color-light">Informações</a>
+                        <a href="Index.html#contato" class="hv-contato text-color-light">Contato</a>
                         <div class="bg-hover"></div>
                     </nav>
                 </div>
