--- a/Index.html
+++ b/Index.html
@@ -85,7 +85,7 @@
                             <h3 class="title-banner text-color-light">Agende sua doação!</h3>
                             <p class="text-banner text-color-light">Faça sua parte, agende aqui sua doação. doar é um ato de amor e salva vidas, a cada doação você salva ate quatro pessoas. o ato de doar nao traz nenhum maleficio a sua saúde pois o seu corpo se auto organiza positivamente.</p>
                             <button class="btn-banner">
-                                <a href="scheduling.html">Agendar</a>
+                                <span>Agendar</span>
                             </button>
                         </div>
                         <div class="scroll-Down">
