--- a/scheduling.html
+++ b/scheduling.html
@@ -12,6 +12,8 @@
         <title>Agendamento</title>
     </head>
 <body>
+    <div class="overlay toggle-menu"></div>
+
     <!-- HEADER -->
     <header>
         <div class="p-0 container-fluid">
@@ -26,16 +28,44 @@
                         <a href="Index.html/#contato" class="hv-contato text-color-light">Contato</a>
                         <div class="bg-hover"></div>
                     </nav>
-                    <div class="btn-container">
-                        <button class="btn-cadastro">Cadastre-se</button>
-                        <button class="btn-login">
-                            <a href="login.html">Login</a>
+                    <div class="perfil-container dropdown-center">
+                        <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="src/assets/img/icon/user-icon.svg" alt="Icone do perfil" />
+                            <span id="nomeTextView"></span>
                         </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item dropdown-item-logout">Sair</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <button class="btn-menu-mob toggle-menu">
+        <ion-icon name="menu-outline"></ion-icon>
+    </button>
+
+    <nav class="navBar-mob menu-is-close">
+        <a href="Index.html" class="hv-home text-color-light">Home</a>
+        <a href="Index.html" class="hv-servico text-color-light">Serviços</a>
+        <a href="informaçao.html" class="hv-informacao text-color-light">Informações</a>
+        <a href="#contato" class="hv-contato text-color-light">Contato</a>
+        <div class="bg-hover"></div>
+
+       <div class="perfil-container-mob dropdown-center">
+                <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="src/assets/img/icon/user-icon.svg" alt="Icone do perfil" />
+                </button>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item dropdown-item-logout">Sair</a>
+                    </li>
+                </ul>
+            </div>
+    </nav>
 
     <section id="scheduling" class="container-md">
         <article class="container-md">
@@ -165,8 +195,11 @@
 
     </section>
 
+    <script type="text/javascript" src="src/js/main.js"></script>
     <script type="text/javascript" src="dist/calendar.bundle.js"></script>
     <script type="text/javascript" src="dist/scheduling.bundle.js"></script>
     <script type="text/javascript" src="dist/schedulingPageScript.bundle.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
