Adicionando menu responsivo do agendamento

--- a/Index.html
+++ b/Index.html
@@ -79,8 +79,8 @@
         <!-- HOME -->
         <section id="home">
             <div class="banner">
-                <div class="container">
-                    <div class="col-md-7">
+                <div class="p-md-0 container">
+                    <div class="p-md-0 col-md-7">
                         <div class="box-text">
                             <h3 class="title-banner text-color-light">Agende sua doação!</h3>
                             <p class="text-banner text-color-light">Faça sua parte, agende aqui sua doação. doar é um ato de amor e salva vidas, a cada doação você salva ate quatro pessoas. o ato de doar nao traz nenhum maleficio a sua saúde pois o seu corpo se auto organiza positivamente.</p>
