--- a/homeUser.html
+++ b/homeUser.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="shortcut icon" href="src/assets/img/icon/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="src/assets/img/icon/favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
@@ -79,8 +79,8 @@
         <!-- HOME -->
         <section id="home">
             <div class="banner">
-                <div class="container">
-                    <div class="col-md-7">
+                <div class="p-md-0 container">
+                    <div class="p-md-0 col-md-7">
                         <div class="box-text">
                             <h3 class="title-banner text-color-light">Agende sua doação!</h3>
                             <p class="text-banner text-color-light">Faça sua parte, agende aqui sua doação. doar é um ato de amor e salva vidas, a cada doação você salva ate quatro pessoas. o ato de doar nao traz nenhum maleficio a sua saúde pois o seu corpo se auto organiza positivamente.</p>
