--- a/scheduling.html
+++ b/scheduling.html
@@ -3,62 +3,64 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="shortcut icon" href="src/assets/img/icon/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="src/assets/img/icon/favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="src/assets/css/bootstrap-grid.min.css" />
         <link rel="stylesheet" href="src/assets/css/schedulingStyle.css" />
         <link rel="stylesheet" href="src/assets/css/main.css" />
         <title>Agendamento</title>
     </head>
-<body>
-    <div class="overlay toggle-menu"></div>
+    <body>
+        <div class="overlay toggle-menu"></div>
 
-    <!-- HEADER -->
-    <header>
-        <div class="p-0 container-fluid">
-            <div class="p-0 container">
-                <div class="navBar">
-                    <img src="src/assets/img/icon/Logo.svg" alt="Banner" class="logo" />
-
-                    <nav class="nav-container">
-                        <a href="Index.html" class="hv-home text-color-light">Home</a>
-                        <a href="Index.html#servicos" class="hv-servico text-color-light">Serviços</a>
-                        <a href="Index.html#informacao" class="hv-informacao text-color-light">Informações</a>
-                        <a href="Index.html#contato" class="hv-contato text-color-light">Contato</a>
-                        <div class="bg-hover"></div>
-                    </nav>
-<<<<<<< HEAD
-                    <div class="perfil-container dropdown-center">
-                        <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="src/assets/img/icon/user-icon.svg" alt="Icone do perfil" />
-                            <span id="nomeTextView"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a class="dropdown-item dropdown-item-logout">Sair</a>
-                            </li>
-                        </ul>
+        <!-- HEADER -->
+        <header>
+            <div class="p-md-0 container-fluid">
+                <div class="p-md-0 container">
+                    <div class="navBar">
+                        <div>
+                            <img src="src/assets/img/icon/Logo.svg" alt="Banner" class="logo" />
+                        </div>
+                        <nav class="nav-container">
+                            <a href="homeUser.html" class="hv-home text-color-light">Home</a>
+                            <a href="#servicos" class="hv-servico text-color-light">Serviços</a>
+                            <a href="informaçao.html" class="hv-informacao text-color-light">Informações</a>
+                            <a href="#contato" class="hv-contato text-color-light">Contato</a>
+                            <div class="bg-hover"></div>
+                        </nav>
+                        <div class="perfil-container dropdown-center">
+                            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="src/assets/img/icon/user-icon.svg" alt="Icone do perfil" />
+                                <span id="nomeTextView"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item dropdown-item-logout">Sair</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-=======
->>>>>>> 50721caa40c576188c62a9ecdaa35dfe20751a65
                 </div>
             </div>
-        </div>
-    </header>
+        </header>
 
-    <button class="btn-menu-mob toggle-menu">
-        <ion-icon name="menu-outline"></ion-icon>
-    </button>
+        <button class="btn-menu-mob toggle-menu">
+            <ion-icon name="menu-outline"></ion-icon>
+        </button>
 
-    <nav class="navBar-mob menu-is-close">
-        <a href="Index.html" class="hv-home text-color-light">Home</a>
-        <a href="Index.html" class="hv-servico text-color-light">Serviços</a>
-        <a href="informaçao.html" class="hv-informacao text-color-light">Informações</a>
-        <a href="#contato" class="hv-contato text-color-light">Contato</a>
-        <div class="bg-hover"></div>
+        <nav class="navBar-mob menu-is-close">
+            <a href="Index.html" class="hv-home text-color-light">Home</a>
+            <a href="Index.html" class="hv-servico text-color-light">Serviços</a>
+            <a href="informaçao.html" class="hv-informacao text-color-light">Informações</a>
+            <a href="#contato" class="hv-contato text-color-light">Contato</a>
+            <div class="bg-hover"></div>
 
-       <div class="perfil-container-mob dropdown-center">
+            <div class="perfil-container-mob dropdown-center">
                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img src="src/assets/img/icon/user-icon.svg" alt="Icone do perfil" />
                 </button>
@@ -68,109 +70,94 @@
                     </li>
                 </ul>
             </div>
-    </nav>
+        </nav>
 
-    <section id="scheduling" class="container-md">
-        <article class="container-md">
-            <div class="calendarTitle">
-                <div></div>
-                <span>Escolha uma data para realizar sua doação</span>
-            </div>
-
-            <div id="calendarContainer">
-
-                <div id="calendar" class="container-md">
-                    <div class="calendar-header">
-
-                        <div>
-                            <button class="btn" id="prevMonthBtn">❮</button>
-                        </div>
-
-                        <div class="calendar-text">
-                            <p id="month-text"></p>
-                            <p id="year-text"></p>
-                        </div>
-
-                        <div>
-                            <button class="btn" id="nextMonthBtn">❯</button>
-                        </div>
-
-                    </div>
-
-                    <ul class="container-week-day">
-                        <li class="week-day">D</li>
-                        <li class="week-day">S</li>
-                        <li class="week-day">T</li>
-                        <li class="week-day">Q</li>
-                        <li class="week-day">Q</li>
-                        <li class="week-day">S</li>
-                        <li class="week-day">S</li>
-                    </ul>
-
-                    <div id="month">
-
-                    </div>
-
+        <section id="scheduling" class="container-md">
+            <article class="container-md">
+                <div class="calendarTitle">
+                    <div></div>
+                    <span>Escolha uma data para realizar sua doação</span>
                 </div>
 
-                <div id="notice" class="container-md">
-                    <div class="notice-Title">
-                        <span><strong>Avisos</strong></span>
-                    </div>
-                    <div class="billboard">
-                        <ul class="adviceList">
+                <div id="calendarContainer">
+                    <div id="calendar" class="container-md">
+                        <div class="calendar-header">
+                            <div>
+                                <button class="btn" id="prevMonthBtn">❮</button>
+                            </div>
 
-                            <li class="adviceItemList">
-                                <div class="adviceItemList-title">
-                                    <span>Importante!!</span>
-                                </div>
-                                <div class="adviceItemList-content">
-                                    <div class="adviceItemList-info">
-                                        <p>
-                                            Sua doação só poderá ser efetivada mediante a ausência de qualquer impedimento. Essa análise será realizada pelo Banco de sangue no dia e horário agendados.
-                                        </p>
-                                    </div>
-                                </div>
-                            </li>
+                            <div class="calendar-text">
+                                <p id="month-text"></p>
+                                <p id="year-text"></p>
+                            </div>
 
-                            <li class="adviceItemList">
-                                <div class="adviceItemList-title">
-                                    <span>Atenção Doador!!!</span>
-                                </div>
-                                <div class="adviceItemList-content">
-                                    <div class="adviceItemList-info">
-                                        <p>
-                                            FAVOR CHEGAR COM 15 MINUTOS DE ANTECEDÊNCIA AO HORÁRIO AGENDADO
-                                        </p>
-                                    </div>
-                                </div>
-                            </li>
+                            <div>
+                                <button class="btn" id="nextMonthBtn">❯</button>
+                            </div>
+                        </div>
 
-                            <li class="adviceItemList">
-                                <div class="adviceItemList-title">
-                                    <span>Não sabe como doar?</span>
-                                </div>
-                                <div class="adviceItemList-content">
-                                    <div class="adviceItemList-info">
-                                        <p>
-                                            Clique no botão ao lado para mais informações.
-                                        </p>
-                                    </div>
-                                    <div class="adviceItemList-infolink">
-                                        <button ><a href="informaçao.html">Acessar</a></button>
-                                    </div>
-                                </div>
-                            </li>
+                        <ul class="container-week-day">
+                            <li class="week-day">D</li>
+                            <li class="week-day">S</li>
+                            <li class="week-day">T</li>
+                            <li class="week-day">Q</li>
+                            <li class="week-day">Q</li>
+                            <li class="week-day">S</li>
+                            <li class="week-day">S</li>
                         </ul>
+
+                        <div id="month"></div>
                     </div>
 
+                    <div id="notice" class="container-md">
+                        <div class="notice-Title">
+                            <span><strong>Avisos</strong></span>
+                        </div>
+                        <div class="billboard">
+                            <ul class="adviceList">
+                                <li class="adviceItemList">
+                                    <div class="adviceItemList-title">
+                                        <span>Importante!!</span>
+                                    </div>
+                                    <div class="adviceItemList-content">
+                                        <div class="adviceItemList-info">
+                                            <p>Sua doação só poderá ser efetivada mediante a ausência de qualquer impedimento. Essa análise será realizada pelo Banco de sangue no dia e horário agendados.</p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="adviceItemList">
+                                    <div class="adviceItemList-title">
+                                        <span>Atenção Doador!!!</span>
+                                    </div>
+                                    <div class="adviceItemList-content">
+                                        <div class="adviceItemList-info">
+                                            <p>FAVOR CHEGAR COM 15 MINUTOS DE ANTECEDÊNCIA AO HORÁRIO AGENDADO</p>
+                                        </div>
+                                    </div>
+                                </li>
+
+                                <li class="adviceItemList">
+                                    <div class="adviceItemList-title">
+                                        <span>Não sabe como doar?</span>
+                                    </div>
+                                    <div class="adviceItemList-content">
+                                        <div class="adviceItemList-info">
+                                            <p>Clique no botão ao lado para mais informações.</p>
+                                        </div>
+                                        <div class="adviceItemList-infolink">
+                                            <button><a href="informaçao.html">Acessar</a></button>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
+            </article>
 
-            </div>
-        </article>
-
-        <article id="schedulingOptions" class="container-md">
-            <div class="schedulingOptions-content">
+            <article id="schedulingOptions" class="container-md">
+                <div class="schedulingOptions-content">
                     <select id="selectLocation" class="schedulingOptions-select form-select form-select-lg mb-3" aria-label=".form-select-lg example">
                         <option selected value="">Selecione um Local *</option>
                     </select>
@@ -178,31 +165,31 @@
                     <select id="selectTime" class="schedulingOptions-select form-select form-select-lg mb-3" aria-label=".form-select-lg example">
                         <option selected value="">Selecione um Horário *</option>
                     </select>
-            </div>
+                </div>
 
-            <div class="schedulingOptions-endSignupContainer">
-                   <div class="schedulingOptions-endSignup container-md">
+                <div class="schedulingOptions-endSignupContainer">
+                    <div class="schedulingOptions-endSignup container-md">
                         <div class="schedulingOptions-endSignup-advice">
-                            <p>
-                                Lembre-se de levar o comprovante ou documento com foto
-                            </p>
+                            <p>Lembre-se de levar o comprovante ou documento com foto</p>
                         </div>
                         <div class="schedulingOptions-endSignup-button">
                             <button id="doneButton">
                                 <span>Finalizar Agendamento</span>
                             </button>
                         </div>
-                   </div>
-            </div>
-        </article>
+                    </div>
+                </div>
+            </article>
+        </section>
 
-    </section>
-
-    <script type="text/javascript" src="src/js/main.js"></script>
-    <script type="text/javascript" src="dist/calendar.bundle.js"></script>
-    <script type="text/javascript" src="dist/scheduling.bundle.js"></script>
-    <script type="text/javascript" src="dist/schedulingPageScript.bundle.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</body>
+        <script type="text/javascript" src="src/js/main.js"></script>
+        <script type="text/javascript" src="dist/calendar.bundle.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="dist/scheduling.bundle.js"></script>
+        <script type="text/javascript" src="dist/schedulingPageScript.bundle.js"></script>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    </body>
 </html>
