--- a/scheduling.html
+++ b/scheduling.html
@@ -5,14 +5,23 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="shortcut icon" href="src/assets/img/icon/favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />    
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="src/assets/css/bootstrap-grid.min.css" />
         <link rel="stylesheet" href="src/assets/css/schedulingStyle.css" />
         <link rel="stylesheet" href="src/assets/css/main.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
         <title>Agendamento</title>
     </head>
     <body>
         <div class="overlay toggle-menu"></div>
+        <!-- PRELOAD -->
+        <div class="preloader">
+            <div class="preloader-inner">
+                <img src="src/assets/img/icon/Logo-preload.svg" />
+                <p class="text-color-dark">Aguarde um pouquinho ... Estou preparando o ambiente</p>
+            </div>
+        </div>
 
         <!-- HEADER -->
         <header>
@@ -79,7 +88,7 @@
                     <div id="calendar" class="container-md">
                         <div class="calendar-header">
                             <div>
-                                <button class="btn" id="prevMonthBtn">❮</button>
+                                <button class="btn-calendar" id="prevMonthBtn">❮</button>
                             </div>
 
                             <div class="calendar-text">
@@ -88,7 +97,7 @@
                             </div>
 
                             <div>
-                                <button class="btn" id="nextMonthBtn">❯</button>
+                                <button class="btn-calendar" id="nextMonthBtn">❯</button>
                             </div>
                         </div>
 
